# live-transcription-to-web-rs

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  index.html  run-container.sh
src/: main.rs
