[package]
name = "live_transcriber"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
cpal = "0.17.3"
futures = "0.3.32"
rtrb = "0.3.3"
serde_json = "1.0.149"
sherpa-onnx = "1.12.39"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
